--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,29 @@ body {
     color: #333;
     background-color: #fff;
 }
-
+.title{
+    font-size: 48px;
+    font-family: "Playfair Display";
+    color: black;
+    margin: 0;
+}
+.bullet{
+    font-size: 24px;
+}
+.button-about-me{
+    background-color: rgba(0, 0, 0, 0);
+    border-color: rgb(224, 181, 101);
+    font-weight: 400;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 20px;
+    font-size: 18px;
+}
+.button-about-me:hover{
+    background-color: rgb(224, 181, 101);
+    color: #fff;
+}
 .container{
     width: 80%;
     margin: auto;
@@ -22,7 +44,6 @@ body {
 .first{
     width: 33%;
     float: left;
-
 
 }
 .second{
@@ -47,7 +68,8 @@ body {
   color: #fff;
   padding-top: 20px;
   padding-bottom: 20px;
-  text-align: center;
+  text-align: justify;
+  width: 100%;
 }
 #navbar ul{
     padding: 0;
@@ -65,4 +87,6 @@ body {
 #about-me{
     background-image: url(file:///Users/anton/Desktop/www/images/about-me.jpg);
     background-position: right;
-}
+    padding-top: 50px;
+    padding-bottom: 50px;
+} 
