--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,16 @@ body {
     color: #333;
     background-color: #fff;
 }
+input{
+    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 20px;
+    font-size: 18px;
+    background-color: rgba(0, 0, 0, 0);
+    margin-right:20px;
+
+}
 .title{
     font-size: 48px;
     font-family: "Playfair Display";
@@ -82,7 +92,7 @@ body {
 .photo{
     margin: 5px;
 }
-.list-esle{
+.e{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -93,12 +103,16 @@ body {
     color:gray;
 }
 #portfolio{
+    
     text-align: center;
     background-color: antiquewhite;
+    padding-bottom: 30px;
 }
 #else{
     text-align: center;
     background-color: #333;
+    padding-bottom: 30px;
+
 }
 #navbar{
   background-color: #333;
@@ -121,8 +135,20 @@ body {
     font-size: 18px;
     padding-right: 15px;
 }
+#main-footer{
+    background-color: #333;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+#feedback{
+    margin-bottom: 20px;
+    text-align: center;
+}
 #about-me{
-    background-image: url(/images/about-me.jpg);
+    background-image: url(http://olgatavluy.ru/images/about-me.jpg);
     background-position: right;
     padding-top: 50px;
     padding-bottom: 50px;
