--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,7 @@ p{
     padding-bottom:20px;
     padding-top: 60px;
     text-align: center;
-    background-image: url(http://olgatavluy.ru/image/new/bride4.jpj);
+    background-image: url(http://olgatavluy.ru/image/new/bride4.jpg);
 }
 #feedback input::-webkit-input-placeholder { 
     color: white; 
